variables.RunHalf.scala.error
Compilation error:
RunHalf:7: error: ')' expected but '}' found.
} 
^